--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/banking?useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=qwerty123@
 spring.datasource.driver.class=com.cj.jdbc.Driver
